crates/zeek-websocket-derive/tests/zeek_event-non-value-fail.rs
use zeek_websocket_derive::zeek_event;

#[zeek_event(handle_foo)]
fn foo(_xs: &u8) {}

fn main() {}
